styles/style.css
body {
  width: 100%;
  height: 100vh;
  margin: 0;
  font-family: cursive;
}

#parent {
  width: 100%;
  height: 100%;
  text-align: -webkit-center;
  display: flex;
  align-items: center;
  justify-content: center;
}

.dark {
  background-color: black;
}

.tictactoeDiv {
  padding: 30px;
  height: 82%;
}

@media (max-width: 216px) {
  .tictactoeDiv {
    padding: 15px;
  }
}

.buttonTopic {
  background-image: url(/img/buttonTopic.svg);
  background-size: 100% 100%;
  background-repeat: no-repeat;
  width: 11%;
  height: 7%;
  outline: none;
  cursor: pointer;
  border: none;
  background-color: white;
}

.dark .buttonTopic {
  background-image: url(/img/darkButtonTopic.svg);
  background-color: black;
}

.playerDiv {
  width: 41vh;
  padding: 2% 0;
  text-align: center;
}

.player {
  font-size: 7vh;
}

.dark .player {
  color: rgba(227, 227, 227, 1);
}

.win .player {
  color: rgba(70, 163, 255, 1);
}

.playerP {
  color: rgba(173, 173, 173, 1);
  font-size: 4vh;
  height: 7vh;
}

.cellDiv {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
  gap: 15px;
  max-height: 60vh;
}

@media (max-width: 328px) {
  .cellDiv {
    gap: 6px;
    width: 86vw;
  }
}
@media (max-height: 463px) {
  .cellDiv {
    gap: 6px;
  }
}

.cell {
  background-image: url(/img/empty-block.svg);
  background-size: 100% 100%;
  background-repeat: no-repeat;
  width: 100%;
  height: 0;
  padding-bottom: 100%;
  margin: 0;
  outline: none;
  cursor: pointer;
  border: none;
  background-color: white;
}

.dark .cell {
  background-image: url(/img/empty-darkBlock.svg);
  background-color: black;
}

.stepX {
  background-image: url(/img/full-block-X.svg);
}

.dark .stepX {
  background-image: url(/img/full-darkBlock-X.svg);
}

.stepO {
  background-image: url(/img/full-block-O.svg);
}

.dark .stepO {
  background-image: url(/img/full-darkBlock-O.svg);
}

.cellWait {
  background-image: url(/img/empty-block-wait.svg);
}

.dark .cellWait {
  background-image: url(/img/empty-darkBlock-wait.svg);
}

.button {
  background-image: url(/img/Button-play-Again.svg);
  background-size: 100% 100%;
  background-repeat: no-repeat;
  width: 100%;
  height: 8%;
  padding-top: 0px;
  margin-top: 5vh;
  cursor: pointer;
  outline: none;
  border: none;
  background-color: white;
  display: none;
}

.dark .button {
  background-image: url(/img/darkButton-play-Again.svg);
  background-color: black;
}

.win .button {
  display: block;
}

.draw .button {
  display: block;
}

@media (max-width: 360px) and (min-height: 465px) {
  .tictactoeDiv {
    padding: 10px;
  }

  .playerDiv {
    width: 75vw;
  }

  .player {
    font-size: 11vw;
  }

  .playerP {
    font-size: 4vw;
  }
}

